tdf#101135 FILESAVE .xlsx Save XML_outlineLevelRow, XML_outlineLevelCol keys

In .xlsx, the XML_outlineLevelRow and XML_outlineLevelCol keys
are required for Microsoft Office365 application
to properly displaying Outline values.

Change-Id: If4184ddc4fbfaa409732ddb0fb4ca85b4a27b024
(cherry picked from commit ad121df71ad463bed8caf147d27f020b548f0862)